--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -76,6 +76,10 @@
 		--destructive-foreground: 0 85.7% 97.3%;
 
 		--ring: 217.2 32.6% 17.5%;
+
+		input[type=month] {
+			color-scheme: dark;
+		}
 	}
 }
 
