--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Over+the+Rainbow&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -141,5 +144,17 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@layer utilities {
+  .font-inter {
+    font-family: 'Inter', sans-serif;
+  }
+  .font-roboto {
+    font-family: 'Roboto', sans-serif;
+  }
+  .font-poppins {
+    font-family: 'Poppins', sans-serif;
   }
 }
